syntax = "proto3";

option csharp_namespace = "GrpcServer.Web.Protos";


message GetDataRequest{
	int32 no = 1 ;
}

message DataTransResponse{
	  string Info = 1;
}

service MyDataTransService{
	rpc GetByNo (GetDataRequest) returns (DataTransResponse);
}
